fix build error