@@ -192,6 +192,29 @@
                             <skip>false</skip>
                             <imageName>${imageName}</imageName>
                             <fallback>false</fallback>
+                            <buildArgs>
+                                <buildArg>-H:NativeLinkerOption=/SUBSYSTEM:CONSOLE</buildArg>
+                                <buildArg>-J-Dfile.encoding=UTF-8</buildArg>
+                                <buildArg>-J-Dstdout.encoding=UTF-8</buildArg>
+                                <buildArg>-J-Dstderr.encoding=UTF-8</buildArg>
+                                <buildArg>-J-Dconsole.encoding=UTF-8</buildArg>
+                                <buildArg>--verbose</buildArg>
+                                <buildArg>--add-opens=java.base/java.nio=ALL-UNNAMED</buildArg>
+                                <buildArg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</buildArg>
+                                <buildArg>--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED</buildArg>
+                                <buildArg>--trace-class-initialization=ch.qos.logback.classic.Logger</buildArg>
+                                <buildArg>--trace-object-instantiation=ch.qos.logback.core.AsyncAppenderBase$Worker</buildArg>
+                                <buildArg>--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback</buildArg>
+                                <buildArg>-H:ReflectionConfigurationFiles=./src/main/resources/reflection-config.json</buildArg>
+                                <buildArg>--report-unsupported-elements-at-runtime</buildArg>
+                                <buildArg>--allow-incomplete-classpath</buildArg>
+                                <buildArg>--enable-url-protocols=http,https</buildArg>
+                                <buildArg>-H:EnableURLProtocols=http</buildArg>
+                                <buildArg>-H:EnableURLProtocols=https</buildArg>
+                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.NOP_FallbackServiceProvider</buildArg>
+                                <buildArg>--initialize-at-build-time=org.slf4j.helpers.SubstituteServiceProvider</buildArg>
+                            </buildArgs>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -242,7 +265,6 @@
                                 <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                 <buildArg>--initialize-at-build-time=org.slf4j.helpers.NOP_FallbackServiceProvider</buildArg>
                                 <buildArg>--initialize-at-build-time=org.slf4j.helpers.SubstituteServiceProvider</buildArg>
-                                <buildArg></buildArg>
                             </buildArgs>
                         </configuration>
                     </plugin>
